--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongodb": "^4.2.2"
+    "mongodb": "^4.2.2",
+    "multer": "^1.4.4",
+    "sslcommerz": "^1.6.6",
+    "uuid": "^8.3.2"
   }
 }
