--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.17.2",
     "mongodb": "^4.2.2",
     "multer": "^1.4.4",
-    "sslcommerz": "^1.6.6",
+    "stripe": "^8.195.0",
     "uuid": "^8.3.2"
   }
 }
